<resources>
    <string name="app_name">CarStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_to_carstore">Welcome to CarStore</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="account">Account</string>
    <string name="enter_email_adress">Enter email address</string>
    <string name="see_all">See all</string>
    <string name="recommended">Recommended</string>
    <string name="username">Username</string>
    <string name="uidText">UID:</string>
    <string name="uid">UID</string>
    <string name="save">Save</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sell_car">Sell car</string>
    <string name="you_haven_t_added_any_cars_to_your_favorites">You haven\'t added any cars to your favorites.</string>
    <string name="car_image">Car Image</string>
    <string name="price">Price</string>
    <string name="model">Model</string>
    <string name="usd">USD</string>
    <string name="back">BACK</string>
    <string name="share">SHARE</string>
    <string name="add_favorites">ADD FAVORITES</string>
    <string name="brand_and_model">BRAND, MODEL</string>
    <string name="description">Description</string>
    <string name="car_condition">Car condition</string>
    <string name="condition">Condition</string>
    <string name="year">Year</string>
    <string name="location">Location</string>
    <string name="number">Number</string>
    <string name="call_now">Call Now</string>
    <string name="delete_post">DELETE POST</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="change">Change</string>
    <string name="no_liked_post">No Liked Post</string>
    <string name="menu">Menu</string>
    <string name="notification">Notification</string>
    <string name="filter">Filter</string>
    <string name="logo">Logo</string>
    <string name="navigate_change_password_fragment">Navigate change password fragment</string>
    <string name="brand">Brand</string>
    <string name="new_string">New</string>
    <string name="enter_year">Enter year</string>
    <string name="enter_price">Enter price</string>
    <string name="search_location">Search location</string>
    <string name="upload_images">Upload images</string>
    <string name="write_description_about_your_car">Write description about your car</string>
    <string name="used">Used</string>

</resources>